@@ -1,13 +1,10 @@
-
 package dk.dbc.updateservice.update;
 
-import dk.dbc.common.records.MarcField;
-import dk.dbc.common.records.MarcRecord;
-import dk.dbc.common.records.MarcRecordFactory;
 import dk.dbc.common.records.MarcRecordReader;
 import dk.dbc.common.records.MarcRecordWriter;
-import dk.dbc.common.records.MarcSubField;
-import dk.dbc.common.records.utils.RecordContentTransformer;
+import dk.dbc.marc.binding.DataField;
+import dk.dbc.marc.binding.MarcRecord;
+import dk.dbc.marc.binding.SubField;
 import dk.dbc.updateservice.actions.CreateSingleRecordAction;
 import dk.dbc.updateservice.actions.GlobalActionState;
 import dk.dbc.updateservice.actions.ServiceAction;
@@ -20,13 +17,10 @@ import javax.json.JsonObject;
 import javax.json.JsonReader;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -47,14 +41,13 @@ public class MetakompasHandler {
             entry("uhyggelig", "ng"),
             entry("fantasifuld", "nh"),
             entry("tankevækkende", "ni"));
-    private static final List<String> atmosphereSubjectSubFields = Collections.singletonList("n");
-    private static final List<String> nonAtmosphereSubjectSubFields = Arrays.asList("i", "q", "p", "m", "g", "u", "e", "h", "j", "k", "l", "s", "r", "t", "v");
+    private static final List<Character> atmosphereSubjectSubFields = List.of('n');
+    private static final List<Character> nonAtmosphereSubjectSubFields = List.of('i', 'q', 'p', 'm', 'g', 'u', 'e', 'h', 'j', 'k', 'l', 's', 'r', 't', 'v');
     private static final String COMMON_RECORD_TEMPLATE =
             "001 00 *a*b190004*c*d*fa\n" +
                     "004 00 *rn*ae*xm\n" +
                     "008 00 *th*v0\n" +
                     "040 00 *bdan*fDBC\n" +
-                    "165 00 \n" +
                     "670 00 *a\n" +
                     "996 00 *aDBC\n";
     private static final String ENRICHMENT_RECORD_TEMPLATE =
@@ -141,17 +134,17 @@ public class MetakompasHandler {
         return ld.format(ywFormat);
     }
 
-    private static void doUpdateMetakompasSubjectRecords(List<ServiceAction> children, GlobalActionState state, RawRepo rawRepo, String id, String subFieldName, String category, Properties properties, String subjectId)
-            throws UpdateException, UnsupportedEncodingException {
+    private static void doUpdateMetakompasSubjectRecords(List<ServiceAction> children, GlobalActionState state, RawRepo rawRepo, String id, char subFieldName, String category, Properties properties, String subjectId)
+            throws UpdateException {
         boolean makeCommon = true;
         boolean makeEnrich = true;
         String shortValue;
-        List<MarcField> fields;
+        List<DataField> fields;
 
-        final MarcRecord mainRecord = RecordContentTransformer.decodeRecord(rawRepo.fetchRecord(subjectId, 190004).getContent());
-        fields = mainRecord.getFields();
-        for (MarcField field : fields) {
-            if (field.getName().equals("670")) {
+        final MarcRecord mainRecord = UpdateRecordContentTransformer.decodeRecord(rawRepo.fetchRecord(subjectId, 190004).getContent());
+        fields = mainRecord.getFields(DataField.class);
+        for (DataField field : fields) {
+            if (field.getTag().equals("670")) {
                 makeCommon = false;
                 break;
             }
@@ -159,75 +152,74 @@ public class MetakompasHandler {
         if (makeCommon) {
             final MarcRecordWriter mWriter = new MarcRecordWriter(mainRecord);
             mWriter.setChangedTimestamp();
-            mWriter.addFieldSubfield("670", "a", id);
+            mWriter.addFieldSubfield("670", 'a', id);
             children.add(new UpdateCommonRecordAction(state, properties, mainRecord));
         }
 
-        final MarcRecord enrichmentRecord = RecordContentTransformer.decodeRecord(rawRepo.fetchRecord(subjectId, 191919).getContent());
-        if (subFieldName.equals("n")) {
+        final MarcRecord enrichmentRecord = UpdateRecordContentTransformer.decodeRecord(rawRepo.fetchRecord(subjectId, 191919).getContent());
+        if ('n' == subFieldName) {
             shortValue = getMoodCategoryCode(category);
         } else {
-            shortValue = subFieldName;
+            shortValue = String.valueOf(subFieldName);
         }
-        fields = enrichmentRecord.getFields();
-        for (MarcField field : fields) {
-            if (field.getName().equals("d09")) {
-                final   List<MarcSubField> subFields = field.getSubfields();
-                subFields.add(new MarcSubField("z", "EMK" + getWeekCode()));
+        fields = enrichmentRecord.getFields(DataField.class);
+        for (DataField field : fields) {
+            if (field.getTag().equals("d09")) {
+                final List<SubField> subFields = field.getSubFields();
+                subFields.add(new SubField('z', "EMK" + getWeekCode()));
             }
-            if (field.getName().equals("x09")) {
-                final List<MarcSubField> subFields = field.getSubfields();
-                for (MarcSubField subField : subFields) {
-                    if (subField.getName().equals("p") && subField.getValue().equals(shortValue))
+            if (field.getTag().equals("x09")) {
+                final List<SubField> subFields = field.getSubFields();
+                for (SubField subField : subFields) {
+                    if ('p' == subField.getCode() && subField.getData().equals(shortValue))
                         makeEnrich = false;
                 }
 
             }
         }
         if (makeEnrich) {
-            final MarcField x09Field = new MarcField();
-            x09Field.setName("x09");
-            x09Field.setIndicator("00");
-            final List<MarcSubField> x09subFields = x09Field.getSubfields();
-            x09subFields.add(new MarcSubField("p", shortValue));
+            final DataField x09Field = new DataField("x09", "00");
+            final List<SubField> x09subFields = x09Field.getSubFields();
+            x09subFields.add(new SubField('p', shortValue));
             final String metaCompassId = getNewIdNumber(properties, JNDIResources.OPENNUMBERROLL_NAME_FAUST);
-            x09subFields.add(new MarcSubField("q", metaCompassId));
+            x09subFields.add(new SubField('q', metaCompassId));
             fields.add(x09Field);
-            enrichmentRecord.setFields(fields);
+            enrichmentRecord.getFields().clear();
+            enrichmentRecord.getFields().addAll(fields);
             final MarcRecordWriter writer = new MarcRecordWriter(enrichmentRecord);
             writer.setChangedTimestamp();
             children.add(new UpdateEnrichmentRecordAction(state, properties, enrichmentRecord, 190004));
         }
     }
 
-    private static void doCreateMetakompasSubjectRecords(List<ServiceAction> children, GlobalActionState state, String id, String subFieldName, String subfieldContent, String category, Properties properties)
+    private static void doCreateMetakompasSubjectRecords(List<ServiceAction> children, GlobalActionState state, String id, char subFieldName, String subfieldContent, String category, Properties properties)
             throws UpdateException {
         try {
-            final MarcRecord commonSubjectRecord = MarcRecordFactory.readRecord(COMMON_RECORD_TEMPLATE);
+            final MarcRecord commonSubjectRecord = UpdateRecordContentTransformer.readRecordFromString(COMMON_RECORD_TEMPLATE);
             final MarcRecordWriter writer = new MarcRecordWriter(commonSubjectRecord);
             final String newId = getNewIdNumber(properties, JNDIResources.OPENNUMBERROLL_NAME_FAUST_8);
-            writer.addOrReplaceSubfield("001", "a", newId);
+            writer.addOrReplaceSubField("001", 'a', newId);
             writer.setChangedTimestamp();
             writer.setCreationTimestamp();
-            writer.addOrReplaceSubfield("165", "a", subfieldContent);
-            writer.addOrReplaceSubfield("670", "a", id);
+            writer.addOrReplaceSubField("165", 'a', subfieldContent);
+            writer.addOrReplaceSubField("670", 'a', id);
             children.add(new CreateSingleRecordAction(state, properties, commonSubjectRecord));
 
-            final MarcRecord enrichmentRecord = MarcRecordFactory.readRecord(ENRICHMENT_RECORD_TEMPLATE);
+            final MarcRecord enrichmentRecord = UpdateRecordContentTransformer.readRecordFromString(ENRICHMENT_RECORD_TEMPLATE);
             final MarcRecordWriter enrichmentWriter = new MarcRecordWriter(enrichmentRecord);
-            enrichmentWriter.addOrReplaceSubfield("001", "a", newId);
+            enrichmentWriter.addOrReplaceSubField("001", 'a', newId);
             enrichmentWriter.setChangedTimestamp();
             enrichmentWriter.setCreationTimestamp();
-            enrichmentWriter.addOrReplaceSubfield("d09", "z", "EMK" + getWeekCode());
+            enrichmentWriter.addOrReplaceSubField("d09", 'z', "EMK" + getWeekCode());
             // This gets complicated - put different things in here depending on subfield
             if (atmosphereSubjectSubFields.contains(subFieldName)) {
                 String shortValue = getMoodCategoryCode(category);
-                enrichmentWriter.addOrReplaceSubfield("x09", "p", shortValue);
+                enrichmentWriter.addOrReplaceSubField("x09", 'p', shortValue);
             } else {
-                enrichmentWriter.addOrReplaceSubfield("x09", "p", subFieldName);
+                enrichmentWriter.addOrReplaceSubField("x09", 'p', String.valueOf(subFieldName));
             }
             final String metaCompassId = getNewIdNumber(properties, JNDIResources.OPENNUMBERROLL_NAME_FAUST);
-            enrichmentWriter.addOrReplaceSubfield("x09", "q", metaCompassId);
+            enrichmentWriter.addOrReplaceSubField("x09", 'q', metaCompassId);
             children.add(new UpdateEnrichmentRecordAction(state, properties, enrichmentRecord, 190004));
         } catch (UpdateException e) {
             throw new UpdateException("Creating subject record(s) failed", e);
@@ -235,8 +227,8 @@ public class MetakompasHandler {
 
     }
 
-    private static void identifyAction(List<ServiceAction> children, GlobalActionState state, String id, String subFieldName, String subfieldContent, String category, Properties properties, RawRepo rawRepo)
-            throws UpdateException, SolrException, UnsupportedEncodingException {
+    private static void identifyAction(List<ServiceAction> children, GlobalActionState state, String id, char subFieldName, String subfieldContent, String category, Properties properties, RawRepo rawRepo)
+            throws UpdateException, SolrException {
         if (!(atmosphereSubjectSubFields.contains(subFieldName) || nonAtmosphereSubjectSubFields.contains(subFieldName)))
             return;
         final String solrQuery = SolrServiceIndexer.createGetSubjectId(INDEX_NAME, subfieldContent);
@@ -256,23 +248,23 @@ public class MetakompasHandler {
      * @param minimalMetakompasRecord The record that has to be checked
      */
     public static void createMetakompasSubjectRecords(List<ServiceAction> children, GlobalActionState state, RawRepo rawRepo, MarcRecord minimalMetakompasRecord, Properties properties)
-            throws UpdateException, SolrException, UnsupportedEncodingException {
+            throws UpdateException, SolrException {
         final MarcRecordReader reader = new MarcRecordReader(minimalMetakompasRecord);
         final String id = reader.getRecordId();
-        final List<MarcField> listOf665 = reader.getFieldAll("665");
-        for (MarcField field : listOf665) {
+        final List<DataField> listOf665 = reader.getFieldAll("665");
+        for (DataField field : listOf665) {
             String category = "";
-            if (field.getSubfields().stream().
-                    anyMatch(subfield -> "&".equals(subfield.getName()) && "LEKTOR".equalsIgnoreCase(subfield.getValue()))) {
-                for (MarcSubField subfield : field.getSubfields()) {
-                    if ("&".equals(subfield.getName()) && !"LEKTOR".equalsIgnoreCase(subfield.getValue())) {
-                        category = subfield.getValue();
+            if (field.getSubFields().stream().
+                    anyMatch(subfield -> '&' == subfield.getCode() && "LEKTOR".equalsIgnoreCase(subfield.getData()))) {
+                for (SubField subfield : field.getSubFields()) {
+                    if ('&' == subfield.getCode() && !"LEKTOR".equalsIgnoreCase(subfield.getData())) {
+                        category = subfield.getData();
                     }
                 }
-                for (MarcSubField subfield : field.getSubfields()) {
-                    final String subFieldName = subfield.getName();
-                    if (!"&".equals(subFieldName)) {
-                        identifyAction(children, state, id, subFieldName, subfield.getValue(), category, properties, rawRepo);
+                for (SubField subfield : field.getSubFields()) {
+                    final char subFieldName = subfield.getCode();
+                    if ('&' != subFieldName) {
+                        identifyAction(children, state, id, subFieldName, subfield.getData(), category, properties, rawRepo);
                     }
                 }
             }
